{
  "version": 4,
  "terraform_version": "1.9.1",
  "serial": 63,
  "lineage": "596a6b8d-ce3b-7b76-8d1c-4085f226bed1",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "app_instance_with_profile",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0a5c3558529277641",
            "arn": "arn:aws:ec2:us-east-1:067188631142:instance/i-0e31746b92de88f70",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 1
              }
            ],
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "iam_instance_profile": "EC2InstanceProfile",
            "id": "i-0e31746b92de88f70",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "node-key-pair",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-08db5f09160a47e0a",
            "private_dns": "ip-10-0-1-165.ec2.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.1.165",
            "public_ip": "54.89.12.157",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-0e49e5146c7593b3e",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0c14421fee6eac121",
            "tags": {
              "Name": "NodeJS-EC2"
            },
            "tags_all": {
              "Name": "NodeJS-EC2"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0acec98e02152694f"
            ]
          },
          "dependencies": [
            "aws_iam_instance_profile.instance_profile",
            "aws_iam_role.ecr_access_role",
            "aws_key_pair.my_key_pair",
            "aws_security_group.app_sg",
            "aws_subnet.public_subnet",
            "aws_vpc.custom_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "internet_gw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:067188631142:internet-gateway/igw-0aab85966774afc84",
            "id": "igw-0aab85966774afc84",
            "owner_id": "067188631142",
            "tags": {
              "Name": "InternetGateway"
            },
            "tags_all": {
              "Name": "InternetGateway"
            },
            "vpc_id": "vpc-0b53bbb6e714a87a1"
          },
          "dependencies": [
            "aws_vpc.custom_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public_route_table",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:067188631142:route-table/rtb-0a32a5298d0dc1461",
            "id": "rtb-0a32a5298d0dc1461",
            "owner_id": "067188631142",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0aab85966774afc84",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": null,
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-0b53bbb6e714a87a1"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.internet_gw",
            "aws_vpc.custom_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public_route_association",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-02e98e5e3b097a3b5",
            "route_table_id": "rtb-0a32a5298d0dc1461",
            "subnet_id": "subnet-0c14421fee6eac121"
          },
          "dependencies": [
            "aws_internet_gateway.internet_gw",
            "aws_route_table.public_route_table",
            "aws_subnet.public_subnet",
            "aws_vpc.custom_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "app_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:067188631142:security-group/sg-0acec98e02152694f",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0acec98e02152694f",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 3000,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 3000
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "terraform-20240910064452833300000002",
            "name_prefix": "terraform-",
            "owner_id": "067188631142",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "AppSecurityGroup"
            },
            "tags_all": {
              "Name": "AppSecurityGroup"
            },
            "timeouts": null,
            "vpc_id": "vpc-0b53bbb6e714a87a1"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.custom_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public_subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:067188631142:subnet/subnet-0c14421fee6eac121",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az4",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0c14421fee6eac121",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "067188631142",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "PublicSubnet"
            },
            "tags_all": {
              "Name": "PublicSubnet"
            },
            "vpc_id": "vpc-0b53bbb6e714a87a1"
          },
          "dependencies": [
            "aws_vpc.custom_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "custom_vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:067188631142:vpc/vpc-0b53bbb6e714a87a1",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-0e27ffdf132fb5b8b",
            "default_route_table_id": "rtb-08cd65c8e8add0196",
            "default_security_group_id": "sg-067692a1e830abd57",
            "dhcp_options_id": "dopt-05a71591a47f6e063",
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0b53bbb6e714a87a1",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-08cd65c8e8add0196",
            "owner_id": "067188631142",
            "tags": {
              "Name": "CustomVPC"
            },
            "tags_all": {
              "Name": "CustomVPC"
            }
          }
        }
      ]
    }
  ]
}